tests/baselines/reference/derivedClassTransitivity2.errors.txt
derivedClassTransitivity2.ts(18,1): error TS2322: Type 'E' is not assignable to type 'C'.
  Types of property 'foo' are incompatible.
    Type '(x: number, y?: string | undefined) => void' is not assignable to type '(x: number, y: number) => void'.
      Types of parameters 'y' and 'y' are incompatible.
        Type 'number' is not assignable to type 'string'.
derivedClassTransitivity2.ts(18,5): error TS2454: Variable 'e' is used before being assigned.
derivedClassTransitivity2.ts(20,10): error TS2454: Variable 'e' is used before being assigned.


==== derivedClassTransitivity2.ts (3 errors) ====
    // subclassing is not transitive when you can remove required parameters and add optional parameters
    
    class C {
        foo(x: number, y: number) { }
    }
    
    class D extends C {
        foo(x: number) { } // ok to drop parameters
    }
    
    class E extends D {
        foo(x: number, y?: string) { } // ok to add optional parameters
    }
    
    var c: C;
    var d: D;
    var e: E;
    c = e;
    ~
!!! error TS2322: Type 'E' is not assignable to type 'C'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '(x: number, y?: string | undefined) => void' is not assignable to type '(x: number, y: number) => void'.
!!! error TS2322:       Types of parameters 'y' and 'y' are incompatible.
!!! error TS2322:         Type 'number' is not assignable to type 'string'.
        ~
!!! error TS2454: Variable 'e' is used before being assigned.
    var r = c.foo(1, 1);
    var r2 = e.foo(1, '');
             ~
!!! error TS2454: Variable 'e' is used before being assigned.